--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -8,7 +8,6 @@
     <!-- Distill js -->
     <script src="{{ '/assets/js/distillpub/template.v2.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/distillpub/transforms.v2.js' | relative_url }}"></script>
-    <script src="{{ '/assets/js/distillpub/overrides.js' | relative_url }}"></script>
     {% if page._styles %}
     <!-- Page/Post style -->
     <style type="text/css">
@@ -104,5 +103,8 @@
 
   <d-bibliography src="{{ page.bibliography | prepend: '/assets/bibliography/' | relative_url }}">
   </d-bibliography>
+
+  {% include scripts/jquery.html %}
+  <script src="{{ '/assets/js/distillpub/overrides.js' | relative_url }}"></script>
 
 </html>
