fix more authors bug (#758)
* fix more authors bug

* fix

* add preview

Co-authored-by: Rohan Deb Sarkar <rohandebsarkar@gmail.com>

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -103,12 +103,12 @@
                 class="more-authors"
                 title="click to view {{more_authors_hide}}"
                 onclick="
-                  var element = $('span.more-authors');
+                  var element = $(this);
+                  element.attr('title', '');
                   var more_authors_text = element.text() == '{{more_authors_hide}}' ? '{{more_authors_show}}' : '{{more_authors_hide}}';
                   var cursorPosition = 0;
                   var textAdder = setInterval(function(){
                     element.text(more_authors_text.substring(0, cursorPosition + 1));
-                    element.attr('title', '');
                     if (++cursorPosition == more_authors_text.length){
                       clearInterval(textAdder);
                     }
