--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -2,15 +2,17 @@
 layout: default
 ---
 <!-- _layouts/cv.html -->
-        <div class="post">
+<div class="post">
 
-          <header class="post-header">
-            <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
-            <p class="post-description">{{ page.description }}</p>
-          </header>
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a
+        href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer"
+        class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
+    <p class="post-description">{{ page.description }}</p>
+  </header>
 
-          <article>
-            <div class="cv">
+  <article>
+    <!-- <div class="cv">
               {% for entry in site.data.cv %}
                 <div class="card mt-3 p-3">
                   <h3 class="card-title font-weight-medium">{{ entry.title }}</h3>
@@ -29,7 +31,8 @@ layout: default
                   </div>
                 </div>
               {% endfor %}
-              </div>
-          </article>
+              </div> -->
+    {{ content }}
+  </article>
 
-        </div>
+</div>
