Removed whitespace at top of mobile page

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -29,6 +29,12 @@ h1.title {
   font-weight: 700;
 }
 
+@media (max-width: 576px) {
+  .container {
+    margin-top: 0 !important;
+  }
+}
+
 p,
 h1,
 h2,
