Updated bibliographies, added bib links

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -667,10 +667,11 @@ footer.sticky-bottom {
 
           a {
             color: white;
+            font-weight: bold;
 
-            &:hover {
-              text-decoration: none;
-            }
+            // &:hover {
+            //   text-decoration: none;
+            // }
           }
         }
 
