Ran prettier on files

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -14,7 +14,7 @@
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color};
-  --global-divider-color: rgba(0, 0, 0, .1);
+  --global-divider-color: rgba(0, 0, 0, 0.1);
   --global-card-bg-color: #{$white-color};
 
   --global-tip-block: #42b983;
@@ -49,7 +49,7 @@
   }
 }
 
-html[data-theme='dark'] {
+html[data-theme="dark"] {
   --global-bg-color: #{$grey-color-dark};
   --global-code-bg-color: #{$code-bg-color-dark};
   --global-text-color: #{$grey-color-light};
