--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -1,40 +1,45 @@
 ---
 layout: default
 ---
-
 <!-- about.html -->
 <div class="post">
   <header class="post-header">
     <h1 class="title">
-      {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
-      {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
+      {% if site.title == 'blank' -%}
+        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
+        {{ site.last_name }}
+      {%- else -%}
+        {{ site.title }}
+      {%- endif %}
     </h1>
     <p class="desc">{{ page.subtitle }}</p>
   </header>
 
   <article>
     {% if page.profile -%}
-    <div class="profile float-{%- if page.profile.align == 'left' -%}left{%- else -%}right{%- endif -%}">
-      {%- if page.profile.image %}
-      {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
+      <div class="profile float-{%- if page.profile.align == 'left' -%}left{%- else -%}right{%- endif -%}">
+        {%- if page.profile.image %}
+          {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
 
-      {% if page.profile.image_circular %}
-      {%- assign profile_image_class = "img-fluid z-depth-1 rounded-circle" -%}
-      {% else %}
-      {%- assign profile_image_class = "img-fluid z-depth-1 rounded" -%}
-      {% endif %}
+          {% if page.profile.image_circular %}
+            {%- assign profile_image_class = 'img-fluid z-depth-1 rounded-circle' -%}
+          {% else %}
+            {%- assign profile_image_class = 'img-fluid z-depth-1 rounded' -%}
+          {% endif %}
 
-      {% include figure.liquid
-      path=profile_image_path
-      class=profile_image_class
-      alt=page.profile.image -%}
-      {% endif -%}
-      {%- if page.profile.address %}
-      <div class="address">
-        {{ page.profile.address }}
+          {%
+            include figure.liquid
+            path=profile_image_path
+            class=profile_image_class
+            alt=page.profile.image
+          -%}
+        {% endif -%}
+        {%- if page.profile.address %}
+          <div class="address">
+            {{ page.profile.address }}
+          </div>
+        {%- endif %}
       </div>
-      {%- endif %}
-    </div>
     {%- endif %}
 
     <div class="clearfix">
@@ -43,35 +48,33 @@ layout: default
 
     <!-- News -->
     {% if page.news and site.announcements.enabled -%}
-    <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">News</a></h2>
-    {%- include news.liquid limit=true %}
+      <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">News</a></h2>
+      {%- include news.liquid limit=true %}
     {%- endif %}
 
     <!-- Latest posts -->
     {% if page.latest_posts -%}
-    <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">Latest Posts</a></h2>
-    {%- include latest_posts.liquid %}
+      <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">Latest Posts</a></h2>
+      {%- include latest_posts.liquid %}
     {%- endif %}
 
     <!-- Selected papers -->
     {% if page.selected_papers -%}
-    <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">Selected Publications</a></h2>
-    {%- include selected_papers.liquid %}
+      <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">Selected Publications</a></h2>
+      {%- include selected_papers.liquid %}
     {%- endif %}
 
     <!-- Social -->
     {%- if page.social %}
-    <div class="social">
-      <div class="contact-icons">
-        {% include social.liquid %}
-      </div>
+      <div class="social">
+        <div class="contact-icons">
+          {% include social.liquid %}
+        </div>
 
-      <div class="contact-note">
-        {{ site.contact_note }}
+        <div class="contact-note">
+          {{ site.contact_note }}
+        </div>
       </div>
-
-    </div>
     {%- endif %}
   </article>
-
 </div>
