--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,19 +8,19 @@ $default-font: Source Sans pro;
 $title-font: Source Serif pro;
 
 // Colors
-$red-color: #FF3636 !default;
-$red-color-dark: #B71C1C !default;
-$orange-color: #F29105 !default;
+$red-color: #ff3636 !default;
+$red-color-dark: #b71c1c !default;
+$orange-color: #f29105 !default;
 $blue-color: #0076df !default;
 $blue-color-dark: #00369f !default;
-$cyan-color: #2698BA !default;
+$cyan-color: #2698ba !default;
 $light-cyan-color: lighten($cyan-color, 25%);
 $green-color: #6cb0a1 !default;
-$green-color-lime: #B7D12A !default;
+$green-color-lime: #b7d12a !default;
 $green-color-dark: #009f06 !default;
 $green-color-light: #ddffdd !default;
-$green-color-bright: #11D68B !default;
-$purple-color: #B509AC !default;
+$green-color-bright: #11d68b !default;
+$purple-color: #b509ac !default;
 $light-purple-color: lighten($purple-color, 25%);
 $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
@@ -33,7 +33,6 @@ $grey-900: #212529;
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
-
 
 // Theme colors
 
