--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -190,7 +190,7 @@
       {% if entry.url %}
         <a href="{{ entry.url }}" class="btn btn-sm z-depth-0" role="button">URL</a>
       {% endif %}
-      {% if entry.proquest-url %}
+      {% if entry['proquest-url'] %}
         <a href="{{ entry.proquest-url }}" class="btn btn-sm z-depth-0" role="button">ProQuest</a>
       {% endif %}
       {% if entry.video %}
